--- a/src/gene_dependency.ipynb
+++ b/src/gene_dependency.ipynb
@@ -586,135 +586,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>DepMap_ID</th>\n",
-       "      <th>genes</th>\n",
-       "      <th>value_gene_selected</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>3196802</th>\n",
-       "      <td>ACH-000005</td>\n",
-       "      <td>DICER1_23405</td>\n",
-       "      <td>-1.342802</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3196803</th>\n",
-       "      <td>ACH-000007</td>\n",
-       "      <td>DICER1_23405</td>\n",
-       "      <td>-0.993394</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3196804</th>\n",
-       "      <td>ACH-000009</td>\n",
-       "      <td>DICER1_23405</td>\n",
-       "      <td>-0.409258</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3196805</th>\n",
-       "      <td>ACH-000011</td>\n",
-       "      <td>DICER1_23405</td>\n",
-       "      <td>-0.792070</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3196806</th>\n",
-       "      <td>ACH-000012</td>\n",
-       "      <td>DICER1_23405</td>\n",
-       "      <td>-0.786011</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3197575</th>\n",
-       "      <td>ACH-002463</td>\n",
-       "      <td>DICER1_23405</td>\n",
-       "      <td>-0.959784</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3197576</th>\n",
-       "      <td>ACH-002464</td>\n",
-       "      <td>DICER1_23405</td>\n",
-       "      <td>-1.603509</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3197577</th>\n",
-       "      <td>ACH-002467</td>\n",
-       "      <td>DICER1_23405</td>\n",
-       "      <td>-0.777286</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3197578</th>\n",
-       "      <td>ACH-002508</td>\n",
-       "      <td>DICER1_23405</td>\n",
-       "      <td>-1.030868</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3197579</th>\n",
-       "      <td>ACH-002510</td>\n",
-       "      <td>DICER1_23405</td>\n",
-       "      <td>-1.120057</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>778 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          DepMap_ID         genes  value_gene_selected\n",
-       "3196802  ACH-000005  DICER1_23405            -1.342802\n",
-       "3196803  ACH-000007  DICER1_23405            -0.993394\n",
-       "3196804  ACH-000009  DICER1_23405            -0.409258\n",
-       "3196805  ACH-000011  DICER1_23405            -0.792070\n",
-       "3196806  ACH-000012  DICER1_23405            -0.786011\n",
-       "...             ...           ...                  ...\n",
-       "3197575  ACH-002463  DICER1_23405            -0.959784\n",
-       "3197576  ACH-002464  DICER1_23405            -1.603509\n",
-       "3197577  ACH-002467  DICER1_23405            -0.777286\n",
-       "3197578  ACH-002508  DICER1_23405            -1.030868\n",
-       "3197579  ACH-002510  DICER1_23405            -1.120057\n",
-       "\n",
-       "[778 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "achilles_clean[achilles_clean.genes == 'DICER1_23405']"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
    "outputs": [],
@@ -1064,8 +935,125 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Computed correlations for 1000 / 18119 genes.\n"
+      "Computed correlations for 1000 / 18119 genes.\n",
+      "Computed correlations for 2000 / 18119 genes.\n",
+      "Computed correlations for 3000 / 18119 genes.\n",
+      "Computed correlations for 4000 / 18119 genes.\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/scratch/usertmp/ipykernel_3839478/2887426482.py:10: RuntimeWarning: divide by zero encountered in log10\n",
+      "  return correlation, pvalue, -np.log10(pvalue)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Computed correlations for 5000 / 18119 genes.\n",
+      "Computed correlations for 6000 / 18119 genes.\n",
+      "Computed correlations for 7000 / 18119 genes.\n",
+      "Computed correlations for 8000 / 18119 genes.\n",
+      "Computed correlations for 9000 / 18119 genes.\n",
+      "Computed correlations for 10000 / 18119 genes.\n",
+      "Computed correlations for 11000 / 18119 genes.\n",
+      "Computed correlations for 12000 / 18119 genes.\n",
+      "Computed correlations for 13000 / 18119 genes.\n",
+      "Computed correlations for 14000 / 18119 genes.\n",
+      "Computed correlations for 15000 / 18119 genes.\n",
+      "Computed correlations for 16000 / 18119 genes.\n",
+      "Computed correlations for 17000 / 18119 genes.\n",
+      "Computed correlations for 18000 / 18119 genes.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SELECTED_GENE</th>\n",
+       "      <th>EVALUATED_GENE</th>\n",
+       "      <th>CORRELATION</th>\n",
+       "      <th>PVALUE</th>\n",
+       "      <th>LOGPVALUE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>DIS3L2</td>\n",
+       "      <td>A1BG</td>\n",
+       "      <td>0.018735</td>\n",
+       "      <td>0.601819</td>\n",
+       "      <td>0.220534</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>DIS3L2</td>\n",
+       "      <td>A1CF</td>\n",
+       "      <td>-0.017360</td>\n",
+       "      <td>0.628761</td>\n",
+       "      <td>0.201514</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>DIS3L2</td>\n",
+       "      <td>A2M</td>\n",
+       "      <td>-0.023249</td>\n",
+       "      <td>0.517303</td>\n",
+       "      <td>0.286255</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>DIS3L2</td>\n",
+       "      <td>A2ML1</td>\n",
+       "      <td>-0.058463</td>\n",
+       "      <td>0.103218</td>\n",
+       "      <td>0.986244</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>DIS3L2</td>\n",
+       "      <td>A3GALT2</td>\n",
+       "      <td>0.019349</td>\n",
+       "      <td>0.589967</td>\n",
+       "      <td>0.229173</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  SELECTED_GENE EVALUATED_GENE  CORRELATION    PVALUE  LOGPVALUE\n",
+       "0        DIS3L2           A1BG     0.018735  0.601819   0.220534\n",
+       "1        DIS3L2           A1CF    -0.017360  0.628761   0.201514\n",
+       "2        DIS3L2            A2M    -0.023249  0.517303   0.286255\n",
+       "3        DIS3L2          A2ML1    -0.058463  0.103218   0.986244\n",
+       "4        DIS3L2        A3GALT2     0.019349  0.589967   0.229173"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1092,12 +1080,12 @@
     "    correlation, pvalue, logpvalue = calculate_correlation(selected_gene_data, other_gene_data)\n",
     "    return {'SELECTED_GENE': GENE_SELECTED, 'EVALUATED_GENE': other_gene, 'CORRELATION': correlation, 'PVALUE': pvalue, 'LOGPVALUE': logpvalue}\n",
     "\n",
-    "# Use concurrent.futures to parallelize the computation\n",
+    "# concurrent.futures to parallelize the computation\n",
     "with concurrent.futures.ProcessPoolExecutor() as executor:\n",
     "    for gene_count, result in enumerate(executor.map(calculate_gene_correlations, unique_genes), 1):\n",
     "        correlations.append(result)\n",
     "        \n",
-    "        # Print progress every 1000 genes processed\n",
+    "        # Print progress \n",
     "        if gene_count % 1000 == 0:\n",
     "            print(f\"Computed correlations for {gene_count} / {len(unique_genes)} genes.\")\n",
     "\n",
